# gb

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  imgui.ini
.github/workflows/: ci.yml  pages.yml  release.yml
include/gb/: gb_core.h
scripts/: bootstrap.sh
src/core/: gb_core.c
src/frontend/raylib_desktop/: main.cpp
tests/: test_smoke.c
